// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrows-bind.js [espree] format 1`] = `
"Unexpected token : (1:9)
> 1 | a => ({}::b()\`\`[''].c++ && 0 ? 0 : 0);
    |         ^
  2 | (a => b)::c;
  3 | a::(b => c);
  4 |"
`;

exports[`arrows-bind.js [meriyah] format 1`] = `
"[1:9]: Expected ')' (1:9)
> 1 | a => ({}::b()\`\`[''].c++ && 0 ? 0 : 0);
    |         ^
  2 | (a => b)::c;
  3 | a::(b => c);
  4 |"
`;

exports[`arrows-bind.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a => ({}::b()\`\`[''].c++ && 0 ? 0 : 0);
(a => b)::c;
a::(b => c);

=====================================output=====================================
(a) => ({}::b()\`\`[""].c++ && 0 ? 0 : 0);
((a) => b)::c;
a::((b) => c);

================================================================================
`;
